@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-07-31T01:05:27Z",
+  "timestamp" : "2024-08-01T01:25:08Z",
   "count_outdated" : 2664,
   "uniques_outdated" : 861,
-  "count" : 2690,
-  "uniques" : 873,
+  "count" : 2696,
+  "uniques" : 874,
   "views" : [
     {
       "timestamp": "2024-07-19T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-07-31T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
