@@ -1,6 +1,6 @@
 {
-  "count": 26,
-  "uniques": 12,
+  "count": 32,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2024-07-19T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2024-07-30T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-07-31T00:00:00Z",
+      "count": 6,
+      "uniques": 1
     }
   ]
 }
